# Spinach

./: LICENSE  README.md
Spinach/: .gitignore  CMakeLists.txt  Spinach.sln  Spinach.vcxproj  Spinach.vcxproj.filters  main.cpp
Spinach/examples/bird_flight/: bird.cpp  bird.h  bird_flight_game.cpp  bird_flight_game.h  collision_state.h  collision_utils.hpp  main.cpp  pillar.cpp  pillar.h  pillar_manager.cpp  pillar_manager.h  rng.hpp
Spinach/examples/blocks_in_line/: cq.h  game.cpp  game.h  main.cpp
Spinach/examples/example_with_render_loop/: main.cpp
Spinach/examples/example_without_render_loop/: main.cpp
Spinach/examples/example_without_render_loop/imageproc/: imageproc.cpp  imageproc.h
Spinach/examples/game_of_life/: main.cpp
Spinach/examples/image_processing_with_rmgui/: bluenoise.h  imgprc.h  main.cpp
Spinach/examples/logarithmic_spiral/: main.cpp
Spinach/examples/mine_sweeper/: main.cpp
Spinach/examples/mine_sweeper_clone/: main.cpp
Spinach/examples/parametric_locus_generator/: main.cpp
Spinach/examples/picture_puzzle/: game.cpp  game.h  jigsaw_sprite.cpp  jigsaw_sprite.h  jigsaw_sprite_manager.cpp  jigsaw_sprite_manager.h  main.cpp
Spinach/examples/raycasting_example/: main.cpp
Spinach/examples/raytracing_example/: RayTracer.cpp  RayTracer.h  main.cpp
Spinach/examples/res_for_examples/: bird.ppm  bird_flight_Images_Credits.txt  images_copyright_notice.txt  pillar_bottom.ppm  pillar_top.ppm
Spinach/examples/snake_clone/: game.cpp  game.h  main.cpp  segment.cpp  segment.h  snake.h
Spinach/examples/spirograph_with_rmgui/: main.cpp
Spinach/examples/tictactoe/: main.cpp  tictactoeengine.h
Spinach/examples/wireframe_rendering/: main.cpp  wireframe_renderer.cpp  wireframe_renderer.h
Spinach/examples/wireframe_rendering/n3d/: camera.h  clipper.h  matrix.h  mesh.cpp  mesh.h  n3d.h  rasterizer.cpp  rasterizer.h  vector.h
Spinach/fifth_example/: main.cpp
Spinach/first_example/: main.cpp
Spinach/fourth_example/: main.cpp
Spinach/imageproc/: imageproc.cpp  imageproc.h
Spinach/res/: NAND_ANSI_license.txt  TrueNoFontData.csv  font_tool_url.txt  logo.ppm  ui.scheme
Spinach/second_example/: main.cpp
Spinach/second_example/imageproc/: imageproc.cpp  imageproc.h
Spinach/sixth_example/: main.cpp
Spinach/spinach/common/: spn_collision_utils.cpp  spn_collision_utils.h  spn_common_defs.h  spn_logger.h  spn_profiler.h  spn_profiler.hpp  spn_rng.h  spn_utils.cpp  spn_utils.h
Spinach/spinach/core/: spn_canvas.cpp  spn_canvas.h  spn_core.cpp  spn_core.h  spn_image.cpp  spn_image.h  spn_rfont.cpp  spn_rfont.h
Spinach/spinach/core/anim/: spn_alpha_animation.cpp  spn_alpha_animation.h  spn_alpha_rev_animation.cpp  spn_alpha_rev_animation.h  spn_animation.h  spn_animator.cpp  spn_animator.h  spn_move_alpha_animation.cpp  spn_move_alpha_animation.h  spn_move_animation.cpp  spn_move_animation.h  spn_move_animation.hpp
Spinach/spinach/ui/: button.h  checkbox.h  dropdown.h  label.h  slider.h  spn_ui_event.h  spn_ui_event_translator.h  spn_ui_scheme.h  textbox.h  ui_event.h  ui_event_translator.h  ui_manager.h  ui_scheme.h  widget.h
Spinach/spinach/ui/imgui/: imgui.h  spn_imgui_imgui.h
Spinach/spinach/ui/rmgui/: spn_rmgui_button.h  spn_rmgui_checkbox.h  spn_rmgui_dropdown.h  spn_rmgui_label.h  spn_rmgui_slider.h  spn_rmgui_textbox.h  spn_rmgui_ui_manager.h  spn_rmgui_widget.h
Spinach/third_example/: main.cpp
